--- a/client/templates/application/layout.jade
+++ b/client/templates/application/layout.jade
@@ -1,6 +1,8 @@
 template(name='layout')
 	.container
-		{{>disconnect}}
+		{{>logout}}
+		{{>signin}}
+		{{>signup}}
 		{{>sidebar}}   
 		main
 			{{> yield}}
