--- a/client/templates/modals/signin.jade
+++ b/client/templates/modals/signin.jade
@@ -7,9 +7,10 @@ template(name='signin')
 		.content.ui.form.signin.error
 			.field
 				label Email
-				input#signin-email(name="email" type='email')		  
+				input#signin-email(name="email" type='email')
 			.field
 				label Password
+					a.menuforgotpass Forgot password?
 				input#signin-password(name="password" type='password')
 			.ui.fluid.green.button.submit
 				| Login
