--- a/client/templates/modals/signout.jade
+++ b/client/templates/modals/signout.jade
@@ -1,5 +1,5 @@
-template(name='logout')
-	.ui.basic.modal.logout
+template(name='signout')
+	.ui.basic.modal.signout
 		h2
 			| Are you sure you want to disconnect?
 		.actions
