--- a/client/templates/modals/modal_user/modal_user.jade
+++ b/client/templates/modals/modal_user/modal_user.jade
@@ -1,5 +1,5 @@
 template(name='modalUser')
-	.ui.modal.basic.tiny.modalUser(class="{{member._id}}")
+	.ui.tiny.modal.basic.modalUser(class="{{member._id}}")
 		i.close.icon
 		.header
 			h1.item {{member.username}}
