--- a/client/templates/pages/home/home.scss
+++ b/client/templates/pages/home/home.scss
@@ -89,3 +89,33 @@ section.home{
 		height:150px;
 		width:100%;
 	}
+/*==============================
+=            MOBILE            =
+==============================*/
+@media only screen and (max-width: 767px) {
+	.bgHomeVideo{
+		display:none;
+	}
+	section.home{
+		.contentvertical{
+			.bandeau{
+				h1{
+					font-size:45px;
+				}
+			}
+		}
+	}
+}
+/*==============================
+=            TABLET            =
+==============================*/
+
+@media only screen and (min-width: 768px) {
+
+}
+/*================================
+=            COMPUTER            =
+================================*/
+@media only screen and (min-width: 992px) {
+
+}
