--- a/client/templates/posts/post_item/post_item.scss
+++ b/client/templates/posts/post_item/post_item.scss
@@ -9,7 +9,7 @@
 			right:0!important;
 			bottom:0!important;
 			i{
-				width:30px;
+				width:20px;
 			}
 		}
 	}
@@ -22,5 +22,44 @@
 
 	}
 	
+
+}
+
+
+
+/*==============================
+=            MOBILE            =
+==============================*/
+@media only screen and (max-width: 767px) {
+	.item.postItem{
+		h1.header{
+			font-size: 1.1em!important;
+		}
+		a.header{
+			font-size: 1.1em!important;
+		}
+		.meta{
+			font-size: 0.9em!important;
+		}
+		.extra{
+			.ui.label.comments{
+				display: none;
+			}
+		}
+	}
+}
+/*==============================
+=            TABLET            =
+==============================*/
+@media only screen and (min-width: 768px) {
+
+
+}
+
+/*================================
+=            COMPUTER            =
+================================*/
+@media only screen and (min-width: 992px) {
+
 
 }
