--- a/client/templates/includes/navbar/navbar.jade
+++ b/client/templates/includes/navbar/navbar.jade
@@ -24,7 +24,7 @@ template(name='navbar')
 								|Dashboard
 								i.icon.dashboard
 							a.item.profile(href="{{pathFor 'editProfile'}}")
-								|Edit profile
+								|Settings
 								i.icon.setting
 							.item.modalsignout
 								|Sign out
