--- a/client/templates/modals/connection/signin.jade
+++ b/client/templates/modals/connection/signin.jade
@@ -4,7 +4,7 @@ template(name='signin')
 		.ui.pointing.secondary.menu
 			.active.item Sign in
 			a.item.menusignup Sign up
-		.content.ui.form.signin.error
+		.ui.form.content.signin.error
 			.field
 				label Email
 				input#signin-email(name="email" type='email')
