--- a/client/templates/modals/modalLeave/modalDelete.jade
+++ b/client/templates/modals/modalLeave/modalDelete.jade
@@ -1,7 +1,7 @@
-template(name='modalDelete')
-	.ui.basic.modal.delete
+template(name='modalLeave')
+	.ui.basic.modal.leave
 		h2
-			| Are you sure you want to delete this training?
+			| Are you sure you want to leave this training?
 		.actions
 			.ui.red.inverted.button.cancel
 				i.remove.icon
