--- a/client/templates/modals/modals.scss
+++ b/client/templates/modals/modals.scss
@@ -3,7 +3,7 @@
 /*==============================
 =            MODALS            =
 ==============================*/
-.modal.signout, .modal.delete{
+.modal.signout, .modal.delete , .modal.leave{
 	text-align:center;
 	.actions{
 		text-align: center;
