--- a/client/templates/posts/post_page/post_page.jade
+++ b/client/templates/posts/post_page/post_page.jade
@@ -22,13 +22,13 @@ template(name="postPage")
 								.content
 									| Hour
 									.sub.header {{displayHour startPost}}
-				.ui.tertiary.segment
+				.ui.tertiary.segment.map
 					h5.ui.header
 						i.marker.icon
 						.content
-							| City
-							.sub.header {{city}}
-					#mappage(class="{{type}}")
+							| Address
+							.sub.header {{address}}
+					#mappage1
 				.ui.tertiary.segment
 					h5.ui.header(style="padding-bottom:0")
 						i.list.icon
@@ -47,7 +47,7 @@ template(name="postPage")
 								+commentItem
 						if currentUser
 							+commentSubmit
-				.ui.tertiary.segment
+				.ui.tertiary.segment.attached
 					h5.ui.header
 						i.users.icon
 						.content
@@ -55,7 +55,9 @@ template(name="postPage")
 							//.sub.header {{pluralize membersCount "member"}} 
 					each member in members
 						+labelUser(id=member etat="member") 
-		
+				.ui.bottom.attached.message(style="border:none")
+					a.modalLeave Leave this training
+						i.sign.out.icon.floated.right
 
 
 
@@ -89,24 +91,24 @@ template(name="postPage")
 
 			.four.wide.column
 				.ui.tertiary.segment
-					h4.ui.header(style="padding-bottom:0")
+					h4.ui.header
 						i.calendar.icon
 						.content
 							| Day
 							.sub.header {{displayDay startPost}}
-					h4.ui.header
+					h4.ui.header(style="margin-top:0")
 						i.time.icon
 						.content
 							| Hour
-							.sub.header {{displayHour startPost}}
+							.sub.header  {{displayHour startPost}}
 				.ui.tertiary.segment.map
 					h4.ui.header
 						i.marker.icon
 						.content
-							| City
-							.sub.header {{city}}
-					#mappage(class="{{type}}")
-				.ui.tertiary.segment
+							| Address
+					p.address {{address}}
+					#mappage2
+				.ui.tertiary.segment.attached
 					h4.ui.header
 						i.users.icon
 						.content
@@ -114,7 +116,9 @@ template(name="postPage")
 							//.sub.header {{pluralize membersCount "member"}} 
 					each member in members
 						+labelUser(id=member etat="member") 
-
+				.ui.bottom.attached.message(style="border:none")
+					a.modalLeave Leave this training
+						i.sign.out.icon.floated.right
 
 
 		// COMPUTER
@@ -144,24 +148,24 @@ template(name="postPage")
 
 			.three.wide.column
 				.ui.tertiary.segment
-					h4.ui.header(style="padding-bottom:0")
+					h4.ui.header
 						i.calendar.icon
 						.content
 							| Day
 							.sub.header {{displayDay startPost}}
-					h4.ui.header
+					h4.ui.header(style="margin-top:0")
 						i.time.icon
 						.content
 							| Hour
-							.sub.header {{displayHour startPost}}
+							.sub.header  {{displayHour startPost}}
 				.ui.tertiary.segment.map
 					h4.ui.header
 						i.marker.icon
 						.content
-							| City
-							.sub.header {{city}}
-					#mappage(class="{{type}}")
-				.ui.tertiary.segment
+							| Address
+					p.address {{address}}
+					#mappage3
+				.ui.tertiary.segment.attached
 					h4.ui.header
 						i.users.icon
 						.content
@@ -169,7 +173,11 @@ template(name="postPage")
 							//.sub.header {{pluralize membersCount "member"}}
 					each member in members
 						+labelUser(id=member etat="member")
+				.ui.bottom.attached.message(style="border:none")
+					a.modalLeave Leave this training
+						i.sign.out.icon.floated.right
 
+	+modalLeave
 
 
 	//.ui.grid.stackable
