--- a/client/templates/comments/comment_submit/comment_submit.jade
+++ b/client/templates/comments/comment_submit/comment_submit.jade
@@ -5,4 +5,5 @@ template(name='commentSubmit')
 		.ui.primary.submit.labeled.icon.button.basecolor.tiny
 			i.icon.edit
 			|  Add Comment
+		.ui.error.message
 
