--- a/client/templates/includes/loading.jade
+++ b/client/templates/includes/loading.jade
@@ -1,6 +1,6 @@
 template(name='loading')
-	.ui.middle.aligned.column.centered.grid(style="height:100vh;width:100%;margin-top:-44px;")
+	.loadingTemplate.ui.middle.aligned.column.centered.grid
 		.column 
-			.ui.active.large.centered.inline.loader
+			.ui.active.massive.centered.inline.loader
 	
 
