--- a/client/templates/home/home.jade
+++ b/client/templates/home/home.jade
@@ -28,9 +28,9 @@ template(name='home')
 
 	.bandeau.ui.middle.aligned.column.centered.grid
 		.column 	
-			h1 WILLTEAM
+			h1 SPORTAPP
 				//.ui.label 0.2
-			p find your sport team and get more will !
+			//p find your sport team and get more will !
 			if currentUser
 				a.ui.orange.button.large(href="{{pathFor 'dashboard'}}")
 					| Join the comunity !
