--- a/client/stylesheet/style.scss
+++ b/client/stylesheet/style.scss
@@ -151,6 +151,11 @@ img.ui.avatar.image{
 =            MOBILE            =
 ==============================*/
 @media only screen and (max-width: 767px) {
+	body{
+  overflow-y: scroll; /* has to be scroll, not auto */
+
+		 -webkit-overflow-scrolling: touch;
+	}
 
 }
 /*==============================
