--- a/client/templates/home/home.jade
+++ b/client/templates/home/home.jade
@@ -30,7 +30,7 @@ template(name='home')
 		.column 	
 			h1 SPORTAPP
 				//.ui.label 0.2
-			//p find your sport team and get more will !
+			p find your sport team ! Go Go Go !
 			if currentUser
 				a.ui.orange.button.large(href="{{pathFor 'dashboard'}}")
 					| Join the comunity !
