--- a/client/templates/posts/post_submit/post_submit.jade
+++ b/client/templates/posts/post_submit/post_submit.jade
@@ -4,7 +4,7 @@ template(name='postSubmit')
 			.ui.equal.width.form.postSubmit.error
 				.ui.segment.bgtextcolor
 					.ui.header
-						| CREATE YOUR TRAINING !
+						| CREATE YOUR WORKOUT !
 					p Complete the form and give the opportunity to the community to join you!
 				.field
 					label Title
