--- a/client/templates/includes/footer/footer.jade
+++ b/client/templates/includes/footer/footer.jade
@@ -1,7 +1,7 @@
 template(name="footer")
 	footer.ui.vertical.footer.segment.tiny
 		.ui.container
-			| Willteam  
+			| Sportapp  
 			span - All Rights Reserved
 			//.language
 				i.icon.world
