--- a/client/templates/posts/post_page/post_page.jade
+++ b/client/templates/posts/post_page/post_page.jade
@@ -34,8 +34,8 @@ template(name="postPage")
 						i.list.icon
 						.content
 							| Description
-					.content(style="white-space: pre")
-						p(style="white-space: pre") {{description}}
+					.content.description
+						p {{description}}
 				.ui.tertiary.segment
 					h5.ui.header(style="padding-bottom:0")
 						i.comments.icon
@@ -80,8 +80,8 @@ template(name="postPage")
 						i.list.icon
 						.content
 							| Description
-					.content(style="white-space: pre")
-						|{{description}}
+					.content.description
+						p {{description}}
 				.ui.tertiary.segment
 					h4.ui.header(style="padding-bottom:0")
 						i.comments.icon
@@ -142,8 +142,8 @@ template(name="postPage")
 						i.list.icon
 						.content
 							| Description
-					.content(style="white-space: pre")
-						|{{description}}
+					.content.description
+						p {{description}}
 				.ui.tertiary.segment
 					h4.ui.header(style="padding-bottom:0")
 						i.comments.icon
