--- a/client/templates/posts/post_edit/post_edit.jade
+++ b/client/templates/posts/post_edit/post_edit.jade
@@ -1,7 +1,7 @@
 template(name='postEdit')
 	.ui.grid.stackable.centered
 		.eleven.wide.column.left.aligned
-			.ui.equal.width.form.postEdit.error
+			.ui.equal.width.form.error.postEdit
 				.ui.segment.tertiary.bgtextcolor
 					.ui.header
 						| Edit your training ! 
