--- a/client/templates/posts/posts_list/posts_list.jade
+++ b/client/templates/posts/posts_list/posts_list.jade
@@ -1,7 +1,7 @@
 template(name="postsList")
 	.ui.grid.stackable.postlist.centered
 		.left.aligned.ten.wide.column
-			//.ui.secondary.inverted.segment
+			.ui.secondary.inverted.segment
 				.ui.header
 					|The next trainings 
 				.content
