--- a/client/templates/posts/post_submit/post_submit.jade
+++ b/client/templates/posts/post_submit/post_submit.jade
@@ -1,7 +1,7 @@
 template(name='postSubmit')
 	.ui.grid.stackable.centered
 		.eleven.wide.column.left.aligned
-			.ui.equal.width.form.postSubmit.error
+			.ui.equal.width.form.error.postSubmit
 				.ui.segment.bgtextcolor
 					.ui.header
 						| CREATE YOUR WORKOUT !
