--- a/client/templates/includes/navbar/navbar.jade
+++ b/client/templates/includes/navbar/navbar.jade
@@ -11,7 +11,7 @@ template(name='navbar')
 					a.item.borderless(href="{{pathFor 'postSubmit'}}" class="{{activeRouteClass 'postSubmit'}}")
 						i.plus.icon
 						p START
-					a.item.borderless(href="{{pathFor 'postsList'}}" class="{{activeRouteClass 'postsList'}}")
+					a.item.borderless(href="{{pathFor 'postsFind'}}" class="{{activeRouteClass 'postsFind'}}")
 						i.search.icon
 						p FIND
 					//a.item.large.borderless(href="{{pathFor 'dashboard'}}" class="{{activeRouteClass 'dashboard'}}")
